{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 91,
  "lineage": "882e1e73-9410-de55-d0db-b0293e2058bb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_ngw_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0968a7437d1b3c4cf",
            "association_id": "eipassoc-0f3deb9622ad4108b",
            "domain": "vpc",
            "id": "eipalloc-0968a7437d1b3c4cf",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0bd6eee629986d58a",
            "private_dns": "ip-10-100-1-110.eu-west-2.compute.internal",
            "private_ip": "10.100.1.110",
            "public_dns": "ec2-52-56-43-171.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.43.171",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "checkout",
              "Name": "checkout-NGW-EIP"
            },
            "tags_all": {
              "Environment": "checkout",
              "Name": "checkout-NGW-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_ngw_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e166ee698bada851",
            "association_id": "eipassoc-056bed813747bf08c",
            "domain": "vpc",
            "id": "eipalloc-0e166ee698bada851",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-002441b27dfc9b4cd",
            "private_dns": "ip-10-100-1-137.eu-west-2.compute.internal",
            "private_ip": "10.100.1.137",
            "public_dns": "ec2-35-176-87-28.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.176.87.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "checkout",
              "Name": "checkout-NGW-EIP"
            },
            "tags_all": {
              "Environment": "checkout",
              "Name": "checkout-NGW-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "checkout_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-055c6079e3f65e9ac",
            "arn": "arn:aws:ec2:eu-west-2:522726087487:instance/i-01e2063c3727f4d8f",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01e2063c3727f4d8f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "checkout_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-063ccb515cd898f70",
            "private_dns": "ip-10-100-1-20.eu-west-2.compute.internal",
            "private_ip": "10.100.1.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-008167422251bf2d4",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae217cee2ab1a1aa",
            "tags": {
              "Name": "checkout-0",
              "Project": "checkout"
            },
            "tags_all": {
              "Name": "checkout-0",
              "Project": "checkout"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0290c575cfde7e85f"
            ]
          },
          "dependencies": [
            "aws_security_group.app_sec_group",
            "aws_subnet.private_subnet_az1",
            "aws_subnet.private_subnet_az2"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "covpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:522726087487:internet-gateway/igw-0ccb2bc36da60ff85",
            "id": "igw-0ccb2bc36da60ff85",
            "owner_id": "522726087487",
            "tags": {
              "Environment": "checkout",
              "Name": "checkout-IGW"
            },
            "tags_all": {
              "Environment": "checkout",
              "Name": "checkout-IGW"
            },
            "vpc_id": "vpc-0745018ed210e8268"
          },
          "dependencies": [
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "checkout_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:522726087487:loadbalancer/app/checkout/e4564ad73c1093ff",
            "arn_suffix": "app/checkout/e4564ad73c1093ff",
            "desync_mitigation_mode": "defensive",
            "dns_name": "checkout-89558719.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:522726087487:loadbalancer/app/checkout/e4564ad73c1093ff",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "checkout",
            "security_groups": [
              "sg-0d21f645417c5f41f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09b18f054b91f5e0e"
              },
              {
                "subnet_id": "subnet-09d65e3c5cef98aaa"
              }
            ],
            "subnets": [
              "subnet-09b18f054b91f5e0e",
              "subnet-09d65e3c5cef98aaa"
            ],
            "tags": {
              "Name": "checkout-lb",
              "Project": "checkout"
            },
            "tags_all": {
              "Name": "checkout-lb",
              "Project": "checkout"
            },
            "vpc_id": "vpc-0745018ed210e8268",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.colb_sg",
            "aws_subnet.public_subnet_az1",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:522726087487:listener/app/checkout/e4564ad73c1093ff/611d6382019114aa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:522726087487:targetgroup/checkout-tg/6fc1ae03ad69f18b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:522726087487:listener/app/checkout/e4564ad73c1093ff/611d6382019114aa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:522726087487:loadbalancer/app/checkout/e4564ad73c1093ff",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.checkout_lb",
            "aws_lb_target_group.webapp_lb_tg",
            "aws_security_group.colb_sg",
            "aws_subnet.public_subnet_az1",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jenkins_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:522726087487:listener/app/checkout/e4564ad73c1093ff/6c61250927f02eb1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:522726087487:targetgroup/jenkins-tg/8804070536b62be4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:522726087487:listener/app/checkout/e4564ad73c1093ff/6c61250927f02eb1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:522726087487:loadbalancer/app/checkout/e4564ad73c1093ff",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.checkout_lb",
            "aws_lb_target_group.jenkins_lb_tg",
            "aws_security_group.colb_sg",
            "aws_subnet.public_subnet_az1",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jenkins_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:522726087487:targetgroup/jenkins-tg/8804070536b62be4",
            "arn_suffix": "targetgroup/jenkins-tg/8804070536b62be4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:522726087487:targetgroup/jenkins-tg/8804070536b62be4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jenkins-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0745018ed210e8268"
          },
          "dependencies": [
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:522726087487:targetgroup/checkout-tg/6fc1ae03ad69f18b",
            "arn_suffix": "targetgroup/checkout-tg/6fc1ae03ad69f18b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:522726087487:targetgroup/checkout-tg/6fc1ae03ad69f18b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "checkout-tg",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0745018ed210e8268"
          },
          "dependencies": [
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jenkins_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:522726087487:targetgroup/jenkins-tg/8804070536b62be4-20220208175651789600000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:522726087487:targetgroup/jenkins-tg/8804070536b62be4",
            "target_id": "i-01e2063c3727f4d8f"
          },
          "dependencies": [
            "aws_instance.checkout_ec2",
            "aws_lb_target_group.jenkins_lb_tg",
            "aws_security_group.app_sec_group",
            "aws_subnet.private_subnet_az1",
            "aws_subnet.private_subnet_az2",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "webapp_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:522726087487:targetgroup/checkout-tg/6fc1ae03ad69f18b-20220208175651866400000002",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:522726087487:targetgroup/checkout-tg/6fc1ae03ad69f18b",
            "target_id": "i-01e2063c3727f4d8f"
          },
          "dependencies": [
            "aws_instance.checkout_ec2",
            "aws_lb_target_group.webapp_lb_tg",
            "aws_security_group.app_sec_group",
            "aws_subnet.private_subnet_az1",
            "aws_subnet.private_subnet_az2",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "covpc_ngw_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0968a7437d1b3c4cf",
            "connectivity_type": "public",
            "id": "nat-0401837cd99f5eb4c",
            "network_interface_id": "eni-0bd6eee629986d58a",
            "private_ip": "10.100.1.110",
            "public_ip": "52.56.43.171",
            "subnet_id": "subnet-09d65e3c5cef98aaa",
            "tags": {
              "Environment": "checkout",
              "Name": "checkout-NGW-AZ1"
            },
            "tags_all": {
              "Environment": "checkout",
              "Name": "checkout-NGW-AZ1"
            }
          },
          "dependencies": [
            "aws_eip.eip_ngw_az1",
            "aws_internet_gateway.covpc_igw",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "covpc_ngw_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e166ee698bada851",
            "connectivity_type": "public",
            "id": "nat-07012b57d3594731f",
            "network_interface_id": "eni-002441b27dfc9b4cd",
            "private_ip": "10.100.1.137",
            "public_ip": "35.176.87.28",
            "subnet_id": "subnet-09b18f054b91f5e0e",
            "tags": {
              "Environment": "checkout",
              "Name": "checkout-NGW-AZ2"
            },
            "tags_all": {
              "Environment": "checkout",
              "Name": "checkout-NGW-AZ2"
            }
          },
          "dependencies": [
            "aws_eip.eip_ngw_az2",
            "aws_internet_gateway.covpc_igw",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "az1_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:522726087487:route-table/rtb-099416332537a6f68",
            "id": "rtb-099416332537a6f68",
            "owner_id": "522726087487",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07012b57d3594731f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "checkout",
              "Name": "checkout-rt-az1-private"
            },
            "tags_all": {
              "Environment": "checkout",
              "Name": "checkout-rt-az1-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0745018ed210e8268"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_ngw_az2",
            "aws_internet_gateway.covpc_igw",
            "aws_nat_gateway.covpc_ngw_az2",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "az1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:522726087487:route-table/rtb-01dbd5f37c4f1ab0b",
            "id": "rtb-01dbd5f37c4f1ab0b",
            "owner_id": "522726087487",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ccb2bc36da60ff85",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "checkout",
              "Name": "checkout-rt-az1-public"
            },
            "tags_all": {
              "Environment": "checkout",
              "Name": "checkout-rt-az1-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0745018ed210e8268"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.covpc_igw",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "az2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:522726087487:route-table/rtb-01af94a56d34c3eed",
            "id": "rtb-01af94a56d34c3eed",
            "owner_id": "522726087487",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07012b57d3594731f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "checkout",
              "Name": "checkout-rt-az2-private"
            },
            "tags_all": {
              "Environment": "checkout",
              "Name": "checkout-rt-az2-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0745018ed210e8268"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_ngw_az2",
            "aws_internet_gateway.covpc_igw",
            "aws_nat_gateway.covpc_ngw_az2",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "az2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:522726087487:route-table/rtb-0ecb34837445d9038",
            "id": "rtb-0ecb34837445d9038",
            "owner_id": "522726087487",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ccb2bc36da60ff85",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "checkout",
              "Name": "checkout-rt-az2-public"
            },
            "tags_all": {
              "Environment": "checkout",
              "Name": "checkout-rt-az2-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0745018ed210e8268"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.covpc_igw",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_for_az1_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af9ad72dbab50802",
            "route_table_id": "rtb-099416332537a6f68",
            "subnet_id": "subnet-0ae217cee2ab1a1aa"
          },
          "dependencies": [
            "aws_eip.eip_ngw_az2",
            "aws_internet_gateway.covpc_igw",
            "aws_nat_gateway.covpc_ngw_az2",
            "aws_route_table.az1_private",
            "aws_subnet.private_subnet_az1",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_for_az1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efd6c63c4c500406",
            "route_table_id": "rtb-01dbd5f37c4f1ab0b",
            "subnet_id": "subnet-09d65e3c5cef98aaa"
          },
          "dependencies": [
            "aws_internet_gateway.covpc_igw",
            "aws_route_table.az1_public",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_for_az2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04540befd2bc083f8",
            "route_table_id": "rtb-01af94a56d34c3eed",
            "subnet_id": "subnet-02bc510877478c417"
          },
          "dependencies": [
            "aws_eip.eip_ngw_az2",
            "aws_internet_gateway.covpc_igw",
            "aws_nat_gateway.covpc_ngw_az2",
            "aws_route_table.az2_private",
            "aws_subnet.private_subnet_az2",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_for_az2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9965240d931a254",
            "route_table_id": "rtb-0ecb34837445d9038",
            "subnet_id": "subnet-09b18f054b91f5e0e"
          },
          "dependencies": [
            "aws_internet_gateway.covpc_igw",
            "aws_route_table.az2_public",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:522726087487:security-group/sg-0290c575cfde7e85f",
            "description": "Allow traffic to checkout",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow egress everywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0290c575cfde7e85f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.1.0/24"
                ],
                "description": "HTTP access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.100.1.0/24"
                ],
                "description": "SSH ingress from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "checkout sec group",
            "name_prefix": "",
            "owner_id": "522726087487",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "checkout-app-Sec-Group",
              "Project": "checkout"
            },
            "tags_all": {
              "Name": "checkout-app-Sec-Group",
              "Project": "checkout"
            },
            "timeouts": null,
            "vpc_id": "vpc-0745018ed210e8268"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.checkout_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "colb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:522726087487:security-group/sg-0d21f645417c5f41f",
            "description": "Allow external traffic to the loadbalancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow egress everywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d21f645417c5f41f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80 ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow https ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "checkout LB sec group",
            "name_prefix": "",
            "owner_id": "522726087487",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "checkout-LB-SG",
              "Project": "checkout"
            },
            "tags_all": {
              "Name": "checkout-LB-SG",
              "Project": "checkout"
            },
            "timeouts": null,
            "vpc_id": "vpc-0745018ed210e8268"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow egress everywhere",
            "from_port": 0,
            "id": "sgrule-504830091",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0290c575cfde7e85f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_sec_group",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "colb_443_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow https ingress",
            "from_port": 443,
            "id": "sgrule-760648766",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d21f645417c5f41f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.colb_sg",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "colb_8080_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow 8080 ingress",
            "from_port": 8080,
            "id": "sgrule-3870042250",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d21f645417c5f41f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.colb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "colb_80_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow 80 ingress",
            "from_port": 80,
            "id": "sgrule-798348976",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d21f645417c5f41f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.colb_sg",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "colb_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow egress everywhere",
            "from_port": 0,
            "id": "sgrule-3899905085",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d21f645417c5f41f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.colb_sg",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http8081_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.100.1.0/24"
            ],
            "description": "HTTP 8081 access",
            "from_port": 8081,
            "id": "sgrule-1214852006",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0290c575cfde7e85f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_sec_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.100.1.0/24"
            ],
            "description": "HTTP access",
            "from_port": 8080,
            "id": "sgrule-2133739080",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0290c575cfde7e85f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_sec_group",
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:522726087487:subnet/subnet-0ae217cee2ab1a1aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.100.1.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae217cee2ab1a1aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522726087487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Access": "private",
              "Environment": "checkout",
              "Name": "checkout-private-AZ1"
            },
            "tags_all": {
              "Access": "private",
              "Environment": "checkout",
              "Name": "checkout-private-AZ1"
            },
            "vpc_id": "vpc-0745018ed210e8268"
          },
          "dependencies": [
            "aws_vpc.checkout_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:522726087487:subnet/subnet-02bc510877478c417",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.100.1.32/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bc510877478c417",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522726087487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Access": "private",
              "Environment": "checkout",
              "Name": "checkout-private-AZ2"
            },
            "tags_all": {
              "Access": "private",
              "Environment": "checkout",
              "Name": "checkout-private-AZ2"
            },
            "vpc_id": "vpc-0745018ed210e8268"
          },
          "dependencies": [
            "aws_vpc.checkout_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:522726087487:subnet/subnet-09d65e3c5cef98aaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.100.1.96/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d65e3c5cef98aaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522726087487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Access": "public",
              "Environment": "checkout",
              "Name": "checkout-public-AZ1"
            },
            "tags_all": {
              "Access": "public",
              "Environment": "checkout",
              "Name": "checkout-public-AZ1"
            },
            "vpc_id": "vpc-0745018ed210e8268"
          },
          "dependencies": [
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:522726087487:subnet/subnet-09b18f054b91f5e0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.100.1.128/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b18f054b91f5e0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522726087487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Access": "public",
              "Environment": "checkout",
              "Name": "checkout-public-AZ2"
            },
            "tags_all": {
              "Access": "public",
              "Environment": "checkout",
              "Name": "checkout-public-AZ2"
            },
            "vpc_id": "vpc-0745018ed210e8268"
          },
          "dependencies": [
            "aws_vpc.checkout_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "checkout_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:522726087487:vpc/vpc-0745018ed210e8268",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.1.0/24",
            "default_network_acl_id": "acl-0173f509300a1d408",
            "default_route_table_id": "rtb-03faa60c897c1530d",
            "default_security_group_id": "sg-0ee8daa7839acf99c",
            "dhcp_options_id": "dopt-005e6147932b6475d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0745018ed210e8268",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03faa60c897c1530d",
            "owner_id": "522726087487",
            "tags": {
              "Environment": "checkout",
              "Name": "checkout-VPC"
            },
            "tags_all": {
              "Environment": "checkout",
              "Name": "checkout-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}